@@ -134,6 +134,12 @@ argument of ``Xapian::QueryParser::parse_query(query_string, flags)`` to
 enable it, and tell the QueryParser which database to expand wildcards
 from using the ``QueryParser::set_database(database)`` method.
 
+You can limit the number of terms a wildcard will expand to by
+calling ``Xapian::QueryParser::set_max_wildcard_expansion()``. If a
+wildcard expands to more terms than that number, an exception will be
+thrown. The exception may be thrown by the QueryParser, or later when
+Enquire handles the query. The default is not to limit the expansion.
+
 Partially entered query matching
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
