@@ -3,6 +3,7 @@
  *
  * Copyright (C) 2004,2005,2006,2007,2008,2009,2010,2011 Olly Betts
  * Copyright (C) 2007,2008,2009 Lemur Consulting Ltd
+ * Copyright (C) 2010 Adam Sjøgren
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -26,6 +27,7 @@
 #include "queryparser_internal.h"
 #include <xapian/error.h>
 #include <xapian/unicode.h>
+#include "str.h"
 #include "stringutils.h"
 
 // Include the list of token values lemon generates.
@@ -257,6 +259,10 @@ class State {
     void stoplist_resize(size_t s) {
 	qpi->stoplist.resize(s);
     }
+
+    Xapian::termcount get_max_wildcard_expansion() const {
+	return qpi->max_wildcard_expansion;
+    }
 };
 
 string
@@ -370,11 +376,21 @@ Term::as_wildcarded_query(State * state_) const
 
     const list<string> & prefixes = prefix_info->prefixes;
     list<string>::const_iterator piter;
+    Xapian::termcount expansion_count = 0;
+    Xapian::termcount max = state_->get_max_wildcard_expansion();
     for (piter = prefixes.begin(); piter != prefixes.end(); ++piter) {
 	string root = *piter;
 	root += name;
 	TermIterator t = db.allterms_begin(root);
 	while (t != db.allterms_end(root)) {
+	    if (max != 0 && ++expansion_count > max) {
+		string msg("Wildcard ");
+		msg += unstemmed;
+		msg += "* expands to more than ";
+		msg += str(max);
+		msg += " terms";
+		throw Xapian::QueryParserError(msg);
+	    }
 	    subqs.push_back(Query(*t, 1, pos));
 	    ++t;
 	}
